--- a/public/map.html
+++ b/public/map.html
@@ -11,10 +11,16 @@
 <style>
   body { margin:0; padding:0; }
   #map { position:absolute; top:0; bottom:0; width:100%; }
+  #call { position: absolute; top: 0; left: 20px;}
 </style>
 </head>
 <body>
-<div id='map'></div>
-<script src='static/js/script.js'></script>
+  <script>
+    function matt(param){document.getElementById("call").innerHTML = param;}
+  </script>
+  <div id='map'></div>
+  <p id="call">Hello</p>
+
+  <script src='static/js/script.js'></script>
 </body>
 </html>
