Push to benji to work on localhost

--- a/public/map.html
+++ b/public/map.html
@@ -14,7 +14,14 @@
 </style>
 </head>
 <body>
+<p id="call">Hello</p>
+
+<script>
+function matt(param){document.getElementById("call").innerHTML = "MAPPPPPS!";}
+</script>
+
 <div id='map'></div>
-<script src='static/js/script.js'></script>
+<!-- <script src='static/js/script.js'></script> -->
+<script src='static/js/geo.js'></script>
 </body>
 </html>
