--- a/public/map.html
+++ b/public/map.html
@@ -15,7 +15,6 @@
 </style>
 </head>
 <body>
-<<<<<<< HEAD
 <p id="call">Hello</p>
 
 <script>
@@ -24,8 +23,8 @@ function matt(param){document.getElementById("call").innerHTML = "MAPPPPPS!";}
 
 <div id='map'></div>
 <!-- <script src='static/js/script.js'></script> -->
+<script src='../bower_components/mapbox.js/mapbox.js'></script>
 <script src='static/js/geo.js'></script>
-=======
   <script>
     function matt(param){document.getElementById("call").innerHTML = param;}
   </script>
@@ -33,6 +32,5 @@ function matt(param){document.getElementById("call").innerHTML = "MAPPPPPS!";}
   <p id="call">Hello</p>
 
   <script src='static/js/script.js'></script>
->>>>>>> 537eaaba9c82a90e854f07137b5433a3eca845f6
 </body>
 </html>
