Heat map working

--- a/public/map.html
+++ b/public/map.html
@@ -4,9 +4,6 @@
   <meta charset=utf-8 />
   <title>Load GeoJSON</title>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-  <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
-  <!-- <script src='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.js'></script> -->
   <link href='static/bower_components/mapbox.js/mapbox.css' rel='stylesheet' />
   <style>
     body { margin:0; padding:0; }
@@ -18,8 +15,12 @@
   <p id="call">Hello</p>
   <div id='map'></div>
   <!-- <script src='static/js/script.js'></script> -->
-  <script src='static/bower_components/mapbox.js/mapbox.js'></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+  <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/turf/v2.0.2/turf.min.js'></script>
+  <script src='https://api.mapbox.com/mapbox.js/v2.3.0/mapbox.js'></script>
+  <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-heat/v0.1.3/leaflet-heat.js'></script>
   <script src='static/js/geo.js'></script>
-  <script src='static/js/script.js'></script>
+  <!-- <script src='static/js/script.js'></script> -->
 </body>
 </html>
